--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ Desktop.ini
 # Resources contains tons of large files. Also too big.
 /Assets/Resources
 
+# Don't push any site data. Way too large.
+/Assets/SiteData
